--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-intersection-observer": "^9.8.0",
     "react-router-dom": "^6.22.0",
     "react-scroll": "^1.9.0",
-    "react-slick": "^0.30.1",
+    "react-slick": "^0.30.3",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "slick-carousel": "^1.8.1",
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
